--- a/supplementary-material/supplementaryMaterial.tex
+++ b/supplementary-material/supplementaryMaterial.tex
@@ -137,7 +137,7 @@ emphstyle={\color{self}\slshape},
 Symbol 	& Description & Units\\\hline
 $\theta$	& Sensor width & \SI{}{\radian} \\
 $\alpha$	& Animal call/beam width & \SI{}{\radian} \\
-$x_i$	        & Focal Angle $i \in \{1,2,3,4\} $ 	& \SI{}{\radian}\\
+$x_i$	        & Focal angle, $i \in \{1,2,3,4\} $ 	& \SI{}{\radian}\\
 $r$ 		& Detection distance & \SI{}{\meter}\\
 $\bar{p}$ 		& Average profile width & \SI{}{\meter}\\
 $p$ 		& A specific profile width & \SI{}{\meter}\\
@@ -152,7 +152,7 @@ $S$ 		& Probability of remaining stationary & -\\
 $A$ 		& Maximum turning angle & \SI{}{\radian}\\
 
 \end{tabular}
-\caption{List of symbols used to describe the gREM}
+\caption{List of symbols used to describe the gREM and simulations}
 \label{t:paras}
 \end{table}
 
@@ -160,7 +160,7 @@ $A$ 		& Maximum turning angle & \SI{}{\radian}\\
 
 \section{Supplementary Methods}
 \subsection{Introduction}
-This supplementary methods derives all the models used in the paper. For continuity, the gas model derivation is included here as well as in the main text. The calculation of all integrals is included in the Python script S3. 
+These supplementary methods derives all the models used in the paper. For continuity, the gas model derivation is included here as well as in the main text. The calculation of all integrals is included in the Python script S3. 
 
 
 
